# DictScreen

./: .gitignore  pyproject.toml
dictscreen/: __init__.py
